@@ -187,7 +187,7 @@ When you want to run
 you will issue the
 .B cd
 command as above and then type
-.B PYTHONPATH=. bin/offlineimap;
+.B ./offlineimap.py;
 there is no installation step necessary.
 .\"##################################################
 .SH CONFIGURATION
